--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=hueDino
-version=0.1
+version=1.0.1
 author=Brian Carbonette
 maintainer=Brian Carbonette <bcarbonette@andium.com>
 sentence=Philips Hue library for Arduino.
-paragraph=Philips Hue library for Arduino.
-category=Uncategorized
+paragraph=An Arduino library for WiFi101 connected devices implementing the Philips Hue API.
+category=Other
 url=https://github.com/andium/hueDino
 architectures=*
